--- a/apps/orders/.env
+++ b/apps/orders/.env
@@ -1,7 +1,9 @@
-MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
+MONGODB_URI=mongodb+srv://root:password123A@cluster0.l4bpyb6.mongodb.net/test
 
 PORT=3000
 
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_BILLING_QUEUE=billing
 RABBIT_MQ_AUTH_QUEUE=auth
+
+# mongodb://root:password123@mongodb-primary:27017/
